[package]
name = "YSV_TOOL"
version = "0.1.0"
edition = "2021"
authors = ["Gil Unx"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
encoding_rs = "0.8.34"
clap = "2.34.0"

